django content blocks and snippets

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,14 +1,15 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <<h3>HEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD</h3>
+    <h3>HEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD</h3>
   </head>
   <body>
-    <h1>This is main home body</h1>
+    {% block content %}
+    {% endblock content %}
   </body>
-  <<footer>
+  <footer>
     <h4>fooooooooooooooooooooooooooooooooooot</h4>
   </footer>
 </html>
