--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -4,7 +4,18 @@
 <div style="border: 4px solid #6e994d; margin: 8px">
   <h3>This is content block</h3>
 
-{% include 'personal/snippets/body_snippet.html' %}
+  <!-- ex) 1 & 2 -->
+  <!-- <h2>{{my_number}}</h2> -->
+  <!-- <h5>{{khersi}}</h5> -->
+
+  {% for item in listOfBooks %}
+  <!-- ex) 3.1 -->
+
+  {% include 'personal/snippets/body_snippet.html' with value=item %}
+  <!-- ex) 3 -->
+  <!-- <h4 style = "color: #d2cd43 ;">{{item}}</h4> -->
+  {% endfor %}
+
 </div>
 
 {% endblock content %}
