Django models and admin

--- a/src/personal/templates/personal/snippets/body_snippet.html
+++ b/src/personal/templates/personal/snippets/body_snippet.html
@@ -1,1 +1,2 @@
-<h3 style = "color: #4d4d99">SNIP {{value}}</h3>
+<h3 style = "color: #4d4d99">{{value.title}} | {{value.priority}}</h3>
+<h4>{{value.question}}</h4>
