--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -4,11 +4,11 @@
 <div style="border: 4px solid #6e994d; margin: 8px">
   <h3>This is content block</h3>
 
-  {% for question in questions %}
+  {% for account in accounts %}
 
-  {% include 'personal/snippets/body_snippet.html' with value=question %}
+  {% include 'personal/snippets/body_snippet.html' with value=account %}
 
-  {% endfor %}
+   {% endfor %}
 
 </div>
 
