--- a/src/personal/templates/personal/snippets/body_snippet.html
+++ b/src/personal/templates/personal/snippets/body_snippet.html
@@ -1,2 +1,1 @@
-<h3 style = "color: #4d4d99">{{value.title}} | {{value.priority}}</h3>
-<h4>{{value.question}}</h4>
+<h3 style = "color: #4d4d99">{{value.email}} | {{value.username}}</h3>
