--- a/src/personal/templates/personal/home.html
+++ b/src/personal/templates/personal/home.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div style="border: 4px solid #6e994d; margin: 8px">
-  <h3>This is content block</h3>
+
+  <h3>Registerd users: </h3>
 
   {% for account in accounts %}
 
-  {% include 'personal/snippets/body_snippet.html' with value=account %}
+      {% include 'personal/snippets/body_snippet.html' with value=account %}
 
-   {% endfor %}
-
-</div>
+  {% endfor %}
 
 {% endblock content %}
