--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,10 +5,14 @@
   <meta charset="utf-8">
   <title>Home</title>
   {% if request.user.is_authenticated %}
-    <p>Hello, {{request.user.username}} | <a href="{% url 'logout' %}"> Logout</a></p>
+    <p><a href="{% url 'home' %}"> Home</a> | <a href="{% url 'logout' %}"> Logout</a> </p>
+    <p>Hello, {{request.user.username}} </p>
 
   {% else %}
-  <p> <a href="{% url 'register' %}">Register</a> | <a href="{% url 'home' %}">Login</a> </p>
+  <p>
+    <a href="{% url 'home' %}"> Home</a> |
+    <a href="{% url 'register' %}">Register</a> |
+    <a href="{% url 'login' %}">Login</a> </p>
 
   {% endif %}
   <hr>
