--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,34 +3,31 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Home</title>
-  {% if request.user.is_authenticated %}
-  <p>
-    <a href="{% url 'home' %}"> Home</a> |
-    <a href="{% url 'account' %}"> Account</a> |
-    <a href="{% url 'logout' %}"> Logout</a>
-  </p>
-  <p>Hello, {{request.user.username}} </p>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  {% else %}
-  <p>
-    <a href="{% url 'home' %}"> Home</a> |
-    <a href="{% url 'register' %}">Register</a> |
-    <a href="{% url 'login' %}">Login</a>
-  </p>
-
-  {% endif %}
-  <hr>
+  {% include 'snippets/header.html' %}
 </head>
 
 <body>
-  {% block content %}
-  {% endblock content %}
-</body>
+  
+  <!-- Body -->
+  <style type="text/css">
+  	.main{
+  		min-height: 100vh;
+  		height: 100%;
+  	}
+  </style>
+  <div class="main">
+  	{% block content %}
 
-<footer>
-  <hr>
-  <h4>Clean todo list website | beta version</h4>
-</footer>
+  	{% endblock content %}
+  </div>
+  <!-- End Body -->
+
+  {% include 'snippets/footer.html' %}
+
+</body>
 
 </html>
